# giveaway

./: .gitignore  README.rst  initial-data.py  setup.cfg  setup.py
.circleci/: config.yml
giveaway/: __main__.py  _initialize_database.py  database.py  lib.py  router.py  server.py  test.py
giveaway/handlers/: static.py
giveaway/handlers/registration/: __init__.py  presenter.py  view.py
giveaway/http/: client.py  server.py
giveaway/model/: __init__.py  method.py
giveaway/model/query/: add_registration_prize.sql  create_giveaway.sql  create_giveaway_prize.sql  create_prize.sql  create_registration.sql  find_duplicate_registration.sql  get_current_giveaway.sql  get_current_giveaway_by_id.sql  get_current_giveaway_prizes_by_id.sql  get_duplicates.sql  get_giveaway_title.sql  get_prizes_for_giveaway.sql  get_registrations_by_prize.sql  insert_youtube_channel.sql
giveaway/model/schema/: _create_all_tables.sql
giveaway/registration/: __init__.py  handler.py  presenter.py  schema.py  view.py
giveaway/static/: __init__.py  handler.py
giveaway/winner/: __init__.py  handler.py  presenter.py
static/css/: bluespan-normalize.css
style/: admonition.scss  announce.scss  bluespan.scss  body.css  footnotes.scss  giveaway-form.scss  literal.scss  reference.scss  table.scss  title.scss  toggle.scss
tests/: test_client.py  test_server.py
