[metadata]
name = giveaway
url = https://github.com/blue-span/giveaway
description = bluespan.gg giveaway service
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages =
    giveaway
    giveaway.http
    giveaway.registration
    giveaway.winner
    giveaway.static
    giveaway.model
    giveaway.test
install_requires =
    h11
    apsw
    lxml
    pytz
    xdg
    giveaway-misc

[options.package_data]
giveaway.model =
    **/*.sql
giveaway.static =
    images/*.png
    css/*.css

[options.entry_points]
console_scripts =
    giveaway-init-db = giveaway._initialize_database:main
